Updated homepage with relevant info

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,5 @@
-<h1>Hello world what is the happ.</h1>
+<h1>Welcome to Whiteboard</h1>
+<p>Please either login as an existing user or sign up if you are new</p>
+
+<a href="/login.template.client.html"> Existing user</a> </br>
+<a href="/register.template.client.html"> Sign up now! </a>
