Added login/register components from class

--- a/src/main/webapp/jquery/register/register.template.client.html
+++ b/src/main/webapp/jquery/register/register.template.client.html
@@ -34,12 +34,12 @@
           <input type="password" id="password"/>
         </div>
 
-        <div class="groupFld">
+        <span class="groupFld">
           <label for="password2">
             Validate Password
           </label>
           <input type="password" id="password2"/>
-        </div>
+        </span>
     </div>
       <button id="registerBtn"> Register </button>
       <a href="/login.template.client.html"> Sign up! </a>
