--- a/src/main/webapp/jquery/login/login.template.client.html
+++ b/src/main/webapp/jquery/login/login.template.client.html
@@ -13,33 +13,41 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
-    <h1> Login </h1>
-
-    <p> Please login with your data</p>
-    <div>
-      <label for="username">
-        Username
-      </label>
-      <input type="text"
-             placeholder="Ernie"
-             id="usernameFld"/>
+    <div class="container">
+      <div class="wbdv-body">
+        <h1>Sign In</h1>
+        <form>
+          <div class="form-group row">
+            <label for="username" class="col-sm-2 col-form-label">
+              Username </label>
+            <div class="col-sm-10">
+              <input class="form-control" id="username" placeholder="Alice">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="password" class="col-sm-2 col-form-label">
+              Password </label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control wbdv-password-fld"
+                id="password" placeholder="123qwe#$%">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+              <button class="btn btn-primary btn-block">Sign in</button>
+              <div class="row">
+                <div class="col-6">
+                  <a href="#">Forgot Password?</a>
+                </div>
+                <div class="col-6">
+                  <a href="#" class="float-right">Sign up</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
-    <div>
-      <label for="password">
-        Password
-      </label>
-      <input type="password"
-             id="passwordFld"/>
-    </div>
-    <button id=wbdv-login>
-      Login
-    </button>
-    <a href="/register.template.client.html"> Sign up now! </a>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-    <script src="login.controller.js"> </script>
-
   </body>
 </html>
