--- a/src/main/webapp/jquery/login/login.template.client.html
+++ b/src/main/webapp/jquery/login/login.template.client.html
@@ -21,7 +21,7 @@
             <label for="username" class="col-sm-2 col-form-label">
               Username </label>
             <div class="col-sm-10">
-              <input class="form-control" id="username" placeholder="Alice">
+              <input class="form-control" id="usernameFld" placeholder="Alice">
             </div>
           </div>
           <div class="form-group row">
@@ -29,19 +29,19 @@
               Password </label>
             <div class="col-sm-10">
               <input type="password" class="form-control wbdv-password-fld"
-                id="password" placeholder="123qwe#$%">
+                id="passwordFld" placeholder="123qwe#$%">
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
-              <button class="btn btn-primary btn-block">Sign in</button>
+              <button id="loginBtn" class="btn btn-primary btn-block">log in</button>
               <div class="row">
                 <div class="col-6">
                   <a href="#">Forgot Password?</a>
                 </div>
                 <div class="col-6">
-                  <a href="#" class="float-right">Sign up</a>
+                  <a href="/jquery/register/register.template.client.html" class="float-right">Sign up</a>
                 </div>
               </div>
             </div>
@@ -49,5 +49,12 @@
         </form>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../models/user.model.client.js"></script>
+    <script type="text/javascript" src="../services/user.service.client.js"></script>
+    <script type="text/javascript" src="login.controller.client.js"></script>
   </body>
 </html>
