--- a/src/main/webapp/jquery/login/login.template.client.html
+++ b/src/main/webapp/jquery/login/login.template.client.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="wbdv-body">
         <h1>Sign In</h1>
-        <form>
+        <div>
           <div class="form-group row">
             <label for="username" class="col-sm-2 col-form-label">
               Username </label>
@@ -35,7 +35,7 @@
           <div class="form-group row">
             <label class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
-              <button id="loginBtn" class="btn btn-primary btn-block">log in</button>
+              <button id="loginBtn" class="btn btn-primary btn-block">boo in</button>
               <div class="row">
                 <div class="col-6">
                   <a href="#">Forgot Password?</a>
@@ -46,7 +46,7 @@
               </div>
             </div>
           </div>
-        </form>
+        </div>
       </div>
     </div>
     <script
