--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,6 @@
 <h1>Welcome to Whiteboard</h1>
-<p>Please either login as an existing user or sign up if you are new</p>
+<p>Please either login as an existing user or sign up if you're new.
+Trust me this isn't my actual site... click below to find out :)</p>
 
-<a href="/login.template.client.html"> Existing user</a> </br>
-<a href="/register.template.client.html"> Sign up now! </a>
+<a href="/jquery/login/login.template.client.html"> Existing user</a> </br>
+<a href="/jquery/register/register.template.client.html"> Sign up now! </a>
