--- a/src/main/webapp/jquery/login/login.template.client.html
+++ b/src/main/webapp/jquery/login/login.template.client.html
@@ -13,8 +13,18 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="wbdv-body">
+
+    <div class="wbdv-body">
+      <div class="jumbotron">
+        <h1 class="display-3"><strong>Whiteboard</strong></h1>
+        <p class="lead">Welcome back! You're going to nail it.</p>
+        <hr class="my-10">
+        <p> Don't have an account? </p>
+        <a class="btn btn-lg btn-success"
+            href="/jquery/register/register.template.client.html" role="button">
+           Register here</a>
+      </div>
+      <div class="container">
         <h1>Sign In</h1>
         <div>
           <div class="form-group row">
@@ -35,7 +45,7 @@
           <div class="form-group row">
             <label class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
-              <button id="loginBtn" class="btn btn-primary btn-block">boo in</button>
+              <button id="loginBtn" class="btn btn-primary btn-block">Log in</button>
               <div class="row">
                 <div class="col-6">
                   <a href="#">Forgot Password?</a>
