--- a/src/main/webapp/jquery/profile/profile.template.client.html
+++ b/src/main/webapp/jquery/profile/profile.template.client.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href=
   "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
 <link rel="stylesheet" href=
@@ -10,89 +11,89 @@
 <title>Profile page</title>
 </head>
 <body>
-  <div class="container">
-    <h1 id="title">Profile</h1>
-    <div>
-      <div class="form-group row">
-        <label for="emailFld" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-          <input type="text" readonly class="form-control-plaintext" id="emailFld" value="email@example.com">
+  <div class="container-fluid">
+    <div class="container">
+      <div class="wbdv-body">
+      <h1 id="title">Profile</h1>
+        <div class="form-group row">
+          <label for="emailFld" class="col-lg-2 col-form-label">Email</label>
+          <div class="col-lg-10">
+            <input type="text" readonly class="form-control-plaintext" id="emailFld" value="email@example.com">
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="usernameFld" class="col-sm-2 col-form-label">Username</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" id="usernameFld" placeholder="username">
+        <div class="form-group row">
+          <label for="usernameFld" class="col-lg-2 col-form-label">Username</label>
+          <div class="col-lg-10">
+            <input type="text" class="form-control" id="usernameFld" placeholder="username">
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="passwordFld" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="passwordFld" placeholder="Password">
+        <div class="form-group row">
+          <label for="passwordFld" class="col-lg-2 col-form-label">Password</label>
+          <div class="col-lg-10">
+            <input type="password" class="form-control" id="passwordFld" placeholder="Password">
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="firstNameFld" class="col-sm-2 col-form-label">
-          First Name
-        </label>
-        <div class="col-sm-10">
-          <input type="text"
-                 class="form-control"
-                 id="firstNameFld"
-                 placeholder="first name">
+        <div class="form-group row">
+          <label for="firstNameFld" class="col-xl-2 col-form-label">
+            First Name
+          </label>
+          <div class="col-xl-10">
+            <input type="text"
+                   class="form-control"
+                   id="firstNameFld"
+                   placeholder="first name">
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="lastNameFld"
-               class="col-sm-2 col-form-label">
-          Last Name
-        </label>
-        <div class="col-sm-10">
-          <input type="text"
-                 class="form-control"
-                 id="lastNameFld"
-                 placeholder="last name">
+        <div class="form-group row">
+          <label for="lastNameFld"
+                 class="col-lg-2 col-form-label">
+            Last Name
+          </label>
+          <div class="col-lg-10">
+            <input type="text"
+                   class="form-control"
+                   id="lastNameFld"
+                   placeholder="last name">
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="phoneFld"
-               class="col-sm-2 col-form-label">
-          Phone
-        </label>
-        <div class="col-sm-10">
-          <input type="number"
-                 class="form-control"
-                 id="phoneFld"
-                 placeholder="phone"
-                 value="0">
-
+        <div class="form-group row">
+          <label for="phoneFld"
+                 class="col-lg-2 col-form-label">
+            Phone
+          </label>
+          <div class="col-lg-10">
+            <input type="number"
+                   class="form-control"
+                   id="phoneFld"
+                   placeholder="phone"
+                   value="0">
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="dateOfBirthFld"
-               class="col-sm-2 col-form-label">
-          Date of Birth
-        </label>
-        <div class="col-sm-10">
-          <input type="date"
-                 class="form-control"
-                 id="dateOfBirthFld"
-                 placeholder="date of birth">
+        <div class="form-group row">
+          <label for="dateOfBirthFld" class="col-lg-2 col-form-label">
+                  Date of Birth</label>
+          <div class="col-lg-10">
+            <input type="date"
+                   class="form-control"
+                   id="dateOfBirthFld"
+                   placeholder="date of birth">
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="role" class="col-sm-2 col-form-label">Role</label>
-        <div class="col-sm-10">
-          <input type="text" readonly class="form-control-plaintext" id="roleFld" value="STUDENT">
+        <div class="form-group row">
+          <label for="role" class="col-lg-2 col-form-label">Role</label>
+          <div class="col-lg-10">
+            <input type="text" readonly class="form-control-plaintext"
+            id="roleFld" value="STUDENT">
+          </div>
         </div>
-      </div>
-      <div class="buttons">
-        <button id="updateBtn"
-                type="button"
-                class="btn btn-success btn-block">Update</button>
-        <button id="logoutBtn"
-                type="button"
-                class="btn btn-danger btn-block">Log out</button>
+        <div class="buttons">
+          <button id="updateBtn"
+                  type="button"
+                  class="btn btn-success btn-block">Update</button>
+          <button id="logoutBtn"
+                  type="button"
+                  class="btn btn-danger btn-block">Log out</button>
+        </div>
       </div>
     </div>
   </div>
