--- a/src/main/webapp/jquery/login/login.template.client.html
+++ b/src/main/webapp/jquery/login/login.template.client.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< Updated upstream
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,47 +29,19 @@
         <div>
           <div class="form-group row">
             <label for="username" class="col-sm-2 col-form-label">
-=======
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Sign up page!</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link href="login.style.client.css" rel="stylesheet" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>
-
-<body>
-
-  <div class="wbdv-body">
-    <div class="jumbotron">
-      <h1 class="display-3"><strong>Whiteboard</strong></h1>
-      <p class="lead">Welcome back! You're going to nail it.</p>
-      <hr class="my-10">
-      <p> Don't have an account? </p>
-      <a class="btn btn-lg btn-success" href="/jquery/register/register.template.client.html" role="button">
-           Register here</a>
-    </div>
-    <div class="container">
-      <h1>Sign In</h1>
-      <div>
-        <div class="form-group row">
-          <label for="username" class="col-sm-2 col-form-label">
->>>>>>> Stashed changes
               Username </label>
-          <div class="col-sm-10">
-            <input class="form-control" id="usernameFld" placeholder="Alice">
+            <div class="col-sm-10">
+              <input class="form-control" id="usernameFld" placeholder="Alice">
+            </div>
           </div>
-        </div>
-        <div class="form-group row">
-          <label for="password" class="col-sm-2 col-form-label">
+          <div class="form-group row">
+            <label for="password" class="col-sm-2 col-form-label">
               Password </label>
-          <div class="col-sm-10">
-            <input type="password" class="form-control wbdv-password-fld" id="passwordFld" placeholder="123qwe#$%">
+            <div class="col-sm-10">
+              <input type="password" class="form-control wbdv-password-fld"
+                id="passwordFld" placeholder="123qwe#$%">
+            </div>
           </div>
-<<<<<<< Updated upstream
           <div class="form-group row">
             <label class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
@@ -82,30 +53,18 @@
                 <div class="col-6">
                   <a href="/jquery/register/register.template.client.html" class="float-right">Sign up</a>
                 </div>
-=======
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label"></label>
-          <div class="col-sm-10">
-            <button id="loginBtn" class="btn btn-primary btn-block">Log in</button>
-            <div class="row">
-              <div class="col-6">
-                <a href="#">Forgot Password?</a>
-              </div>
-              <div class="col-6">
-                <a href="/jquery/register/register.template.client.html" class="float-right">Sign up</a>
->>>>>>> Stashed changes
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="../models/user.model.client.js"></script>
-  <script type="text/javascript" src="../services/user.service.client.js"></script>
-  <script type="text/javascript" src="login.controller.client.js"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../models/user.model.client.js"></script>
+    <script type="text/javascript" src="../services/user.service.client.js"></script>
+    <script type="text/javascript" src="login.controller.client.js"></script>
+  </body>
 </html>
