Course service work

--- a/src/main/webapp/jquery/profile/profile.template.client.html
+++ b/src/main/webapp/jquery/profile/profile.template.client.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href=
-  "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
-<link rel="stylesheet" href=
-  "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-<link href="profile.style.client.css" rel="stylesheet" />
-<title>Profile page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link href="profile.style.client.css" rel="stylesheet" />
+  <title>Profile page</title>
 </head>
+
 <body>
   <div class="container-fluid">
     <div class="container">
       <div class="wbdv-body">
-      <h1 id="title">Profile</h1>
+        <h1 id="title">Profile</h1>
         <div class="form-group row">
           <label for="emailFld" class="col-lg-2 col-form-label">Email</label>
           <div class="col-lg-10">
@@ -38,71 +38,49 @@
             First Name
           </label>
           <div class="col-xl-10">
-            <input type="text"
-                   class="form-control"
-                   id="firstNameFld"
-                   placeholder="first name">
+            <input type="text" class="form-control" id="firstNameFld" placeholder="first name">
           </div>
         </div>
         <div class="form-group row">
-          <label for="lastNameFld"
-                 class="col-lg-2 col-form-label">
+          <label for="lastNameFld" class="col-lg-2 col-form-label">
             Last Name
           </label>
           <div class="col-lg-10">
-            <input type="text"
-                   class="form-control"
-                   id="lastNameFld"
-                   placeholder="last name">
+            <input type="text" class="form-control" id="lastNameFld" placeholder="last name">
           </div>
         </div>
         <div class="form-group row">
-          <label for="phoneFld"
-                 class="col-lg-2 col-form-label">
+          <label for="phoneFld" class="col-lg-2 col-form-label">
             Phone
           </label>
           <div class="col-lg-10">
-            <input type="number"
-                   class="form-control"
-                   id="phoneFld"
-                   placeholder="phone"
-                   value="0">
+            <input type="number" class="form-control" id="phoneFld" placeholder="phone" value="0">
           </div>
         </div>
         <div class="form-group row">
           <label for="dateOfBirthFld" class="col-lg-2 col-form-label">
                   Date of Birth</label>
           <div class="col-lg-10">
-            <input type="date"
-                   class="form-control"
-                   id="dateOfBirthFld"
-                   placeholder="date of birth">
+            <input type="date" class="form-control" id="dateOfBirthFld" placeholder="date of birth">
           </div>
         </div>
         <div class="form-group row">
           <label for="role" class="col-lg-2 col-form-label">Role</label>
           <div class="col-lg-10">
-            <input type="text" readonly class="form-control-plaintext"
-            id="roleFld" value="STUDENT">
+            <input type="text" readonly class="form-control-plaintext" id="roleFld" value="STUDENT">
           </div>
         </div>
         <div class="buttons">
-          <button id="updateBtn"
-                  type="button"
-                  class="btn btn-success btn-block">Update</button>
-          <button id="logoutBtn"
-                  type="button"
-                  class="btn btn-danger btn-block">Log out</button>
+          <button id="updateBtn" type="button" class="btn btn-success btn-block">Update</button>
+          <button id="logoutBtn" type="button" class="btn btn-danger btn-block">Log out</button>
         </div>
       </div>
     </div>
   </div>
-  <script
-          src="https://code.jquery.com/jquery-3.3.1.min.js"
-          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-          crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="../models/user.model.client.js"></script>
   <script src="../services/user.service.client.js"></script>
   <script src="profile.controller.client.js"></script>
 </body>
+
 </html>
